# FlightGear

./: CMakeLists.txt  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectClientCommand.cpp  ConnectClientCommand.h  EqualCommandWithoutVar.cpp  EqualCommandWithoutVar.h  Expression.h  GlobalConnectFlightGear.h  IfCommand.cpp  IfCommand.h  KnownFuncCommand.cpp  KnownFuncCommand.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  ParserCommands.cpp  ParserCommands.h  PrintCommand.cpp  PrintCommand.h  README.md  ReadData.cpp  ReadData.h  SleepCommand.cpp  SleepCommand.h  StringToCommands.cpp  StringToCommands.h  UnknownFuncCommand.cpp  UnknownFuncCommand.h  Var.cpp  Var.h  VarDefinitionEqual.cpp  VarDefinitionEqual.h  VarDefinitionLeft.cpp  VarDefinitionLeft.h  VarDefinitionRight.cpp  VarDefinitionRight.h  VariablesSingelton.cpp  VariablesSingelton.h  WhileCommand.cpp  (+6 more)
__MACOSX/: ._flight_simulator
__MACOSX/flight_simulator/: ._fly.txt  ._generic_small.xml
flight_simulator/: fly.txt
